--- a/PotatoSegmentation/PotatoSegmentation.vcxproj.filters
+++ b/PotatoSegmentation/PotatoSegmentation.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="utils.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="selective_search.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="image.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="selective_search.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
