--- a/PotatoSegmentation/PotatoSegmentation.vcxproj
+++ b/PotatoSegmentation/PotatoSegmentation.vcxproj
@@ -123,14 +123,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="disjoint_set.c" />
     <ClCompile Include="image.c" />
+    <ClCompile Include="image_process.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="gbs.c" />
+    <ClCompile Include="matrix.c" />
     <ClCompile Include="selective_search.c" />
     <ClCompile Include="test.c" />
     <ClCompile Include="utils.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="disjoint_set.h" />
     <ClInclude Include="image.h" />
+    <ClInclude Include="gbs.h" />
+    <ClInclude Include="image_process.h" />
+    <ClInclude Include="matrix.h" />
     <ClInclude Include="selective_search.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="test.h" />
@@ -138,6 +146,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="test.jpg">
+      <DeploymentContent>true</DeploymentContent>
+    </Image>
+    <Image Include="test2.jpg">
       <DeploymentContent>true</DeploymentContent>
     </Image>
   </ItemGroup>
