--- a/PotatoSegmentation/PotatoSegmentation.vcxproj
+++ b/PotatoSegmentation/PotatoSegmentation.vcxproj
@@ -145,6 +145,10 @@
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="gbs.bmp" />
+    <Image Include="gbs_no_kernel.bmp" />
+    <Image Include="gbs_with_kernel.bmp" />
+    <Image Include="kernel.bmp" />
     <Image Include="test.jpg">
       <DeploymentContent>true</DeploymentContent>
     </Image>
