--- a/PotatoSegmentation/PotatoSegmentation.vcxproj.filters
+++ b/PotatoSegmentation/PotatoSegmentation.vcxproj.filters
@@ -9,7 +9,7 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Resource Files">
+    <Filter Include="Source Files\Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
@@ -74,10 +74,22 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="test.jpg">
-      <Filter>Resource Files</Filter>
+      <Filter>Source Files\Resource Files</Filter>
     </Image>
     <Image Include="test2.jpg">
-      <Filter>Resource Files</Filter>
+      <Filter>Source Files\Resource Files</Filter>
+    </Image>
+    <Image Include="gbs_with_kernel.bmp">
+      <Filter>Source Files\Resource Files</Filter>
+    </Image>
+    <Image Include="gbs_no_kernel.bmp">
+      <Filter>Source Files\Resource Files</Filter>
+    </Image>
+    <Image Include="gbs.bmp">
+      <Filter>Source Files\Resource Files</Filter>
+    </Image>
+    <Image Include="kernel.bmp">
+      <Filter>Source Files\Resource Files</Filter>
     </Image>
   </ItemGroup>
 </Project>
