--- a/PotatoSegmentation/PotatoSegmentation.vcxproj
+++ b/PotatoSegmentation/PotatoSegmentation.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="matrix.h" />
     <ClInclude Include="selective_search.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="stb_image_resize.h" />
     <ClInclude Include="test.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
