--- a/PotatoSegmentation/PotatoSegmentation.vcxproj.filters
+++ b/PotatoSegmentation/PotatoSegmentation.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="matrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image_resize.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="test_bf_ssm.bmp">
